metadata-classic/objects/HCConfigAlert__c.object
<CustomObject>
    <fields>
        <fullName>BannerMessage__c</fullName>
        <description>Text area to display the message of the help center alert.</description>
        <label>Banner Message</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PublishDateTime__c</fullName>
        <description>The date and time the alert should be published to the help center.</description>
        <label>Publish Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the alert message.</description>
        <inlineHelpText>Draft: alert being drafted
Needs approval: alert needs approval 
Pending start date: alert banner is waiting to be published
Publish: alert banner is active
Archive: alert banner is archived</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Pending start date</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnpublishDateTime__c</fullName>
        <description>The date and time the banner alert message will be unpublished from the help center.</description>
        <label>Unpublish Date and Time</label>
        <type>DateTime</type>
    </fields>
    <label>HC Config: Alert</label>
    <listViews>
        <fullName>ActiveAlerts</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>BannerMessage__c</columns>
        <columns>PublishDateTime__c</columns>
        <columns>UnpublishDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigAlert__c.AlertMessage</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>02: Active Alerts</label>
        <sharedTo>
            <group>ContentUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAlerts</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>BannerMessage__c</columns>
        <columns>PublishDateTime__c</columns>
        <columns>UnpublishDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigAlert__c.AlertMessage</value>
        </filters>
        <label>00: All Alerts</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ArchivedAlerts</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>BannerMessage__c</columns>
        <columns>PublishDateTime__c</columns>
        <columns>UnpublishDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigAlert__c.AlertMessage</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>03: Archived Alerts</label>
        <sharedTo>
            <group>ContentUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewAlertsPendingStart</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>BannerMessage__c</columns>
        <columns>PublishDateTime__c</columns>
        <columns>UnpublishDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigAlert__c.AlertMessage</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Needs approval,Pending start date</value>
        </filters>
        <label>01: New Alerts (Pending Start)</label>
        <sharedTo>
            <group>ContentUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>AlertMessage</fullName>
        <active>true</active>
        <description>Record type used to manage the help center alert banner messages.</description>
        <label>Alert Message</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>